infra/k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: spidey-senses
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
